[Offline Pages] Turn Offliner::Cancel into an async operation to resolve conflicting assumptions between the Offliner and RequestCoordinator.

Upon Offliner::Cancel, RequestCoordinator assumes that the offliner is free, but
offliner may be waiting until save operation to complete. This discrepancy causes
RequestCoordinator to bombard the offliner with all the pending requests, potentially
blocking the main thread for the save operation callback to be called and causing
all pending requests to be labeled as EXPIRED

BUG=694864

Review-Url: https://codereview.chromium.org/2715433006
Cr-Commit-Position: refs/heads/master@{#454740}
(cherry picked from commit 9f04f39d54f599a346c59670f91923f4af05e416)

Review-Url: https://codereview.chromium.org/2744553005 .
Cr-Commit-Position: refs/branch-heads/3029@{#105}
Cr-Branched-From: 939b32ee5ba05c396eef3fd992822fcca9a2e262-refs/heads/master@{#454471}